# MaiMaiNotePad-BackEnd

./: .env.example  .env.template  .gitignore  CHANGELOG.md  CLEANUP_SUMMARY.md  COMMIT_MESSAGE.txt  COVERAGE_PROGRESS_REPORT.md  DEPLOYMENT_FIX_CONFIRMED.md  Dockerfile  GITHUB_ACTIONS_FIX.md  README-KV-API.md  README.md  SECRETS_CONFIG_GUIDE.md  SECRETS_STATUS_CHECK.md  STORAGE_ADAPTER_UPDATE.md  TODO.md  api_routes.py  avatar_utils.py  check-env.js  check-secrets.md  check_password.py  check_users.py  coverage.json  database_models.py  deep-diagnostic.js  demo.html  email_service.py  error_handlers.py  error_messages.json  file_upload.py  final-deployment-check.js  health-check-local.js  health-check.js  jwt_utils.py  logger.py  logging_config.py  main.py  manage.sh  middleware_config.py  models.py  (+19 more)
.github/workflows/: README.md  deploy-to-cloudflare-manual.yml  deploy-to-cloudflare.yml  test-and-build.yml
alembic/: env.py
alembic/versions/: 5ffaf739f376_init_schema.py
api_routes/: __init__.py  admin_router.py  comment_router.py  dictionary_router.py  knowledgeBase_router.py  messages_router.py  persona_router.py  response_util.py  review_router.py  user_router.py
app/: __init__.py  __version__.py  error_handlers.py  file_upload.py  main.py  translation_dict.json
app/api/: __init__.py  deps.py  response_util.py  websocket.py
app/core/: config.py  config_manager.py  database.py  error_handlers.py  logging.py  messages.py  middleware.py  security.py
app/models/: __init__.py  database.py  schemas.py
app/services/: __init__.py  auth_service.py  email_service.py  file_service.py  file_upload_service.py  knowledge_service.py  message_service.py  moderation_service.py  persona_service.py  user_service.py
app/utils/: __init__.py  avatar.py  file.py  websocket.py
configs/: README.md  alembic.ini  config.degraded.toml  config.dev.toml  config.prod.toml  config.toml  redis.conf
configs/templates/: .env.template  config.toml.template
docker/: .env.docker  README.md  docker-compose.yml
docs/: .template.md  API.md  ARCHITECTURE.md  Alembic_迁入_待定使用.md  CHANGELOG.md  CLOUDFLARE_WORKERS_DEPLOYMENT.md  DATABASE_MIGRATION_GUIDE.md  GITHUB_ACTIONS_SETUP.md  MaiMNP_API.postman_collection.json  README.md  README_ERROR_CODES.md  TESTING.md  architecture.md  character-card-workflow.md  database_models.md  文档格式规范.md  文档索引.md  更新总结.md  更新日志.md  架构文档.md  测试文档.md  配置管理文档.md  错误码文档.md  项目优化建议.md  项目整理总结.md
docs/api/: API文档.md  MaiMNP_API.postman_collection.json
docs/architecture/: 架构文档.md  项目优化建议.md
docs/archive/: AI内容审核模块实施总结_2026-02-24.md  Docker文件结构整理_2026-02-23.md  README.md  manage脚本功能扩展_2026-02-23.md  manage脚本错误处理改进_2026-02-23.md  人设卡文件大小限制优化_2026-02-22.md  代码质量修复计划.md  元测试套件重构_2026-02-22.md  密码库迁移说明.md  文档结构优化_2026-02-23.md  文档结构整理记录_2026-02-22.md  测试覆盖率分析.md  类型检查修复总结.md  类型检查修复计划.md  自动缓存失效机制实现_2026-02-24.md  虚拟环境功能实现总结.md  通用缓存失效机制实现_2026-02-24.md  配置文件管理优化_2026-02-23.md  项目整理总结.md
docs/cache/: 缓存中间件使用指南.md  缓存日志记录指南.md  缓存系统配置指南.md  缓存统计API文档.md  缓存配置指南.md  缓存集成示例.md
docs/configuration/: 配置管理文档.md
docs/database/: models.md  数据库迁移指南.md  数据模型.md
docs/deployment/: Docker部署指南.md
docs/development/: 代码质量修复计划.md  代码质量工具.md  版本管理.md  类型检查修复计划.md  虚拟环境创建指南.md
docs/guides/: AI内容审核使用指南.md  AI内容审核快速开始.md  TUI模式说明.md  依赖管理说明.md  密码库迁移说明.md  环境检测功能说明.md  管理工具使用指南.md  管理工具快速参考.md  项目整理总结.md
docs/testing/: 测试环境设置.md  测试配置指南.md
examples/: README.md  cache_logging_demo.py  moderation_demo.py
scripts/: README_SCRIPTS.md  README_TEST_DATA.md  api_smoke_test_1122.py  build.js  cleanup.js  generate_error_codes_doc.py  generate_test_templates.py  prepare_test_data1122.py  reset_security_env.py  脚本说明.md
scripts/python/: check_superadmin.py  check_version.py  generate_error_codes_doc.py  generate_test_templates.py  init_superadmin.py  log_analyzer.py  reset_security_env.py  test_email.py  test_reset_script.py  validate_cache_config.py
scripts/shell/: alembic.sh  cleanup.sh  run_meta_tests.sh  run_parallel_isolation_tests.sh  test_docker_redis.sh  validate_cache_config.sh
src/: app.js  server.js
src/config/: database.js  environment-workers.js
src/database/: d1-client.js  migrate.js
src/middleware/: auth-workers.js  auth.js  error-handler.js  index.js  logger-workers.js  logger.js  rate-limit-workers.js  security-workers.js  validation.js
src/models/: File-workers.js  Knowledge.js  Note-workers.js  Tag-workers.js  User-workers.js  User.js  index-workers.js  index.js
src/routes/: admin-workers.js  admin.js  analytics-workers.js  auth-workers.js  auth.js  backup.js  character-workers.js  index-workers.js  index.js  knowledge-workers.js  knowledge.js  system.js  upload-workers.js  upload.js
src/scripts/: migrate-mongodb-to-d1.js
src/services/: cache-workers.js  database-workers.js  kv-storage.js  r2-storage.js  simple-kv-storage.js  storage-adapter.js  storage-workers.js
src/utils/: logger.js
src/workers/: index.js  kv-api.js
tests/: .test_env.template  HYPOTHESIS_CONFIG.md  README_AUTH_HELPER.md  README_MOCK_SERVICE_FACTORY.md  __init__.py  auth_helper.py  conftest.py  db_manager.py  mock_service_factory.py  test_admin_client_fixture.py  test_admin_service_logic.py  test_api_routes_coverage.py  test_auth.py  test_auth_complete.py  test_auth_service.py  test_cache_logger.py  test_cache_manager_logging.py  test_comprehensive_robustness.py  test_config.py  test_data_factory.py  test_database_errors_comprehensive.py  test_deps.py  test_edge_cases_comprehensive.py  test_email_service.py  test_error_paths_comprehensive.py  test_file_service.py  test_fixture_token_verification.py  test_hypothesis_config.py  test_knowledge.py  test_knowledge_service.py  test_message_service.py  test_mock_fixtures_integration.py  test_mock_service_factory.py  test_persona_service.py  test_property_api.py  test_property_imports.py  test_property_structure.py  test_security.py  test_test_data_factory.py  test_user_service.py  (+3 more)
tests/docs/: AI内容审核测试说明.md  README.md  属性测试说明.md  并行隔离测试说明.md  异常注入器使用指南.md  测试说明.md  边界值生成器使用指南.md
tests/fixtures/: __init__.py  config.py  (+1 more)
(+151 files in other folders)
