# ============================================================================
# MaiMaiNotePad 后端项目配置文件
# ============================================================================
# 本文件是现代 Python 项目的标准配置文件，使用 TOML 格式
# 集成了项目元数据、依赖管理、测试配置等所有配置项
# 
# 相关文档：
# - 测试文档：docs/测试文档.md
# - 配置管理：docs/配置管理文档.md
# ============================================================================

# ----------------------------------------------------------------------------
# 项目元数据
# ----------------------------------------------------------------------------
[project]
name = "maimai-notepad-backend"
dynamic = ["version"]  # 版本号从 app/__version__.py 动态读取
description = "MaiMaiNotePad 后端服务 - 基于 FastAPI 的知识库和人设卡管理系统"
authors = [
    {name = "MaiMaiNotePad Team"}
]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

# 项目关键词
keywords = ["fastapi", "knowledge-base", "persona-card", "backend"]

# 项目分类
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
]

# 项目 URL
[project.urls]
Homepage = "https://github.com/yourusername/maimai-notepad-backend"
Documentation = "https://github.com/yourusername/maimai-notepad-backend/docs"
Repository = "https://github.com/yourusername/maimai-notepad-backend"
Issues = "https://github.com/yourusername/maimai-notepad-backend/issues"

# ----------------------------------------------------------------------------
# Pytest 测试框架配置
# ----------------------------------------------------------------------------
# 所有 pytest 配置都在这里，无需单独的 pytest.ini 文件
# 运行测试：pytest
# 运行特定标记：pytest -m unit
# 并行运行：pytest -n auto

[tool.pytest.ini_options]

# 测试文件路径和命名规则
testpaths = ["tests"]                           # 测试目录
python_files = ["test_*.py"]                    # 测试文件：test_*.py
python_classes = ["Test*", "!TestDataFactory"]  # 测试类：Test*（排除 TestDataFactory）
python_functions = ["test_*"]                   # 测试函数：test_*

# 默认命令行参数
# -v: 详细输出
# --tb=short: 简短的错误回溯
# --hypothesis-show-statistics: 显示 Hypothesis 统计信息
# -n auto: 自动并行测试（使用所有 CPU 核心）
# --dist loadgroup: 按组分配测试（相同标记的测试在同一进程）
addopts = "-v --tb=short --hypothesis-show-statistics -n auto --dist loadgroup"

# 异步测试支持
asyncio_mode = "auto"                           # 自动检测异步测试

# ----------------------------------------------------------------------------
# 日志配置
# ----------------------------------------------------------------------------

# 命令行日志（测试运行时在终端显示）
log_cli = true                                  # 启用命令行日志
log_cli_level = "INFO"                          # 日志级别：INFO
log_cli_format = "%(asctime)s %(levelname)s %(name)s - %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

# 文件日志（保存到文件供后续分析）
log_file = "tests/tests.log"                    # 日志文件路径
log_file_level = "DEBUG"                        # 文件日志级别：DEBUG（更详细）
log_file_format = "%(asctime)s %(levelname)s %(name)s - %(message)s (%(filename)s:%(lineno)d)"
log_file_date_format = "%Y-%m-%d %H:%M:%S"

# ----------------------------------------------------------------------------
# 测试标记（Markers）
# ----------------------------------------------------------------------------
# 使用方式：@pytest.mark.unit
# 运行特定标记：pytest -m unit
# 排除标记：pytest -m "not slow"
# 组合标记：pytest -m "unit and not slow"

markers = [
    # ========================================================================
    # 测试类型标记
    # ========================================================================
    "unit: 单元测试 - 快速、隔离的测试，测试单个函数或类",
    "integration: 集成测试 - 较慢，测试多个组件的交互",
    "e2e: 端到端测试 - 最慢，测试完整的用户流程",
    "property: 属性测试 - 使用 Hypothesis 进行基于属性的测试",
    
    # ========================================================================
    # 优先级标记
    # ========================================================================
    "p0: P0 优先级 - 关键测试，必须通过",
    "p1: P1 优先级 - 重要测试，应该通过",
    "p2: P2 优先级 - 次要测试，可选",
    
    # ========================================================================
    # 性能标记
    # ========================================================================
    "slow: 慢速测试 - 执行时间较长（使用 -m 'not slow' 排除）",
    "fast: 快速测试 - 执行时间小于 1 秒",
    "serial: 串行测试 - 必须单独运行，不能并行",
    
    # ========================================================================
    # 功能模块标记
    # ========================================================================
    "websocket: WebSocket 功能测试 - 实时通信相关",
    "auth: 认证功能测试 - 登录、注册、权限等",
    "api: API 路由测试 - HTTP 接口测试",
    "service: 服务层测试 - 业务逻辑层测试",
    "database: 数据库测试 - 数据库操作和查询",
    "file: 文件操作测试 - 文件上传、下载等",
    
    # ========================================================================
    # 特殊标记
    # ========================================================================
    "bugfix: Bug 修复测试 - 针对特定 Bug 的回归测试",
    "security: 安全测试 - 安全相关功能测试",
    "boundary: 边界测试 - 边界条件和极端情况测试",
    "exception: 异常测试 - 异常处理和错误情况测试",
]

# ============================================================================
# 常用测试命令示例
# ============================================================================
# 
# 运行所有测试：
#   pytest
# 
# 运行单元测试：
#   pytest -m unit
# 
# 运行集成测试：
#   pytest -m integration
# 
# 排除慢速测试：
#   pytest -m "not slow"
# 
# 运行特定文件：
#   pytest tests/unit/test_user_service.py
# 
# 运行特定测试：
#   pytest tests/unit/test_user_service.py::TestUserService::test_create_user
# 
# 生成覆盖率报告：
#   pytest --cov=app --cov-report=html
# 
# 查看覆盖率报告：
#   open htmlcov/index.html  # macOS
#   xdg-open htmlcov/index.html  # Linux
# 
# 并行运行（4 个进程）：
#   pytest -n 4
# 
# 只运行失败的测试：
#   pytest --lf
# 
# 详细输出：
#   pytest -vv
# 
# ============================================================================

# ----------------------------------------------------------------------------
# 构建系统配置
# ----------------------------------------------------------------------------
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# setuptools 配置
[tool.setuptools]
packages = ["app"]

# 动态版本号配置
[tool.setuptools.dynamic]
version = {attr = "app.__version__.__version__"}
