[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maimnp-backend"
version = "1.0.0"
description = "MaiMNP Backend Service"
requires-python = ">=3.11"

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # 默认排除
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  # 项目特定排除
  | alembic/versions
  | data
  | logs
  | uploads
)/
'''

[tool.flake8]
max-line-length = 120
max-complexity = 10
ignore = ["E203", "W503", "E501"]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "env",
    ".eggs",
    "*.egg",
    "build",
    "dist",
    ".pytest_cache",
    ".mypy_cache",
    "alembic/versions",
    "data",
    "logs",
    "uploads",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I", "N", "UP", "B", "A", "C4"]
ignore = [
    "E501",  # 行长度（有些行确实需要长一点）
    "B008",  # 函数调用在默认参数中（FastAPI 的 Depends 是标准用法）
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
# 测试文件排除复杂度检查和一些测试特定的规则
"tests/**/*.py" = [
    "C901",  # 复杂度检查
    "T201",  # print 语句（测试中用于调试）
    "E402",  # 模块级导入不在顶部（某些测试需要特殊导入顺序）
    "B017",  # 盲目捕获 Exception（测试中可以接受）
]
# 示例文件排除复杂度检查
"examples/**/*.py" = ["C901", "T201"]
# Alembic 迁移文件排除所有检查
"alembic/versions/*.py" = ["E", "F", "W", "C90"]

[tool.ruff.lint.isort]
known-first-party = ["app", "tests"]

[tool.mypy]
python_version = "3.11"
# 渐进式类型检查配置 - 适合现有项目
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
no_implicit_optional = false
warn_redundant_casts = false
warn_unused_ignores = false
warn_no_return = false
follow_imports = "normal"
ignore_missing_imports = true
strict_optional = false
# 显示错误代码，方便忽略特定错误
show_error_codes = true
# 不显示错误上下文，减少输出
show_error_context = false

# 启用 SQLAlchemy 插件以正确处理 ORM 模型
plugins = ["sqlalchemy.ext.mypy.plugin"]

# 排除的目录
exclude = [
    "^alembic/versions/.*\\.py$",
    "^build/",
    "^dist/",
    "^\\.venv/",
]

# 忽略第三方库的类型错误
[[tool.mypy.overrides]]
module = [
    "alembic.*",
    "sqlalchemy.*",
    "fastapi.*",
    "pydantic.*",
    "pytest.*",
    "hypothesis.*",
    "toml.*",
    "PIL.*",
    "werkzeug.*",
    "slowapi.*",
    "aiofiles.*",
]
ignore_missing_imports = true
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --tb=short --cov=app --cov-report=term-missing --cov-report=html"
# 排除元测试目录（默认不运行）
norecursedirs = ["tests/meta", ".git", ".tox", "dist", "build", "*.egg"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "property: marks tests as property-based tests",
    "serial: marks tests that must run serially (not in parallel)",
    "meta: marks tests that test the testing framework itself (in tests/meta/)",
]
asyncio_mode = "auto"

[tool.manage]
# 管理工具配置
# 是否隐藏 dialog 安装提示（用户选择 'c' 后会设置为 true）
hide_dialog_tip = false
